fix: step2 dark mode fixed

--- a/pages/styles/Organize.module.scss
+++ b/pages/styles/Organize.module.scss
@@ -147,5 +147,5 @@
 }
 
 .uploadImageWrapper {
-  margin-bottom: 95px;
+  margin-bottom: 90px;
 }
